@@ -1974,9 +1974,6 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration combine.children="append">
                     <fork>false</fork>
-                    <compilerArgs>
-                        <arg>--add-modules=jdk.incubator.vector</arg>
-                    </compilerArgs>
                 </configuration>
             </plugin>
 
